# OdooHackathon2025

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Skill-Swap-Platform-SKILL-SWAP-PLATFORM-1752303797141_1752303797142.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Header.tsx  SearchFilters.tsx  SwapRequestModal.tsx  UserCard.tsx
client/src/lib/: queryClient.ts
client/src/pages/: AdminPanel.tsx  AuthPage.tsx  GettingStarted.tsx  Home.tsx  Landing.tsx  Profile.tsx  ProfileEdit.tsx  SwapDashboard.tsx
client/src/services/: websocket.ts
client/src/types/: index.ts
server/: auth.py  auth.ts  database.py  db.ts  main.py  models.py  requirements.txt  routes.ts  run.py  schemas.py  start_fastapi.py  storage.ts
shared/: schema.ts
